<resources>
    <string name="app_name">Breath!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Setting dialog -->
    <string name="settings_title">Settings</string>
    <string name="settings_text_inhale">Inhale</string>
    <string name="settings_text_exhale">Exhale</string>
    <string name="settings_text_hold">Hold</string>
    <string name="settings_text_close">Close</string>

</resources>
